--- a/package.json
+++ b/package.json
@@ -145,8 +145,10 @@
     "jquery": "3.0.0",
     "moment": "2.15.0",
     "ng2-bootstrap": "1.1.5",
+    "ng2-signalr": "^1.0.1",
     "reflect-metadata": "0.1.8",
     "rxjs": "5.0.0-beta.12",
+    "signalr": "^2.2.1",
     "systemjs": "0.19.38",
     "zone.js": "0.6.23"
   }
