--- a/package.json
+++ b/package.json
@@ -146,6 +146,8 @@
     "moment": "2.15.0",
     "ng2-bootstrap": "1.1.5",
     "ng2-signalr": "^1.0.1",
+    "prism": "^1.0.0",
+    "prismjs": "^1.6.0",
     "reflect-metadata": "0.1.8",
     "rxjs": "5.0.0-beta.12",
     "signalr": "^2.2.1",
