--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
+    "applicationinsights-js": "^1.0.8",
     "core-js": "2.4.0",
     "es-module-loader": "1.0.0",
     "font-awesome": "4.6.3",
